# merc

./: .gitignore  .gitmodules  CHANGELOG  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml
bindings/: CMakeLists.txt
bindings/example/: CMakeLists.txt  main.cpp
bindings/include/merc/: shared_counter.h  shared_mutex.h  string_view.h
crates/aterm/: Cargo.toml  README.md
crates/aterm/benchmarks/benches/: benchmark_aterm.rs
crates/aterm/src/: aterm.rs  aterm_binary_stream.rs  aterm_builder.rs  aterm_int.rs  aterm_list.rs  aterm_storage.rs  aterm_string.rs  global_aterm_pool.rs  lib.rs  markable.rs  parse_term.rs  protected.rs  random_term.rs  shared_term.rs  symbol.rs  symbol_pool.rs  thread_aterm_pool.rs  transmutable.rs
crates/aterm/src/storage/: global_aterm_pool.rs  mod.rs  thread_aterm_pool.rs
crates/collections/: Cargo.toml
crates/collections/src/: compressed_vec.rs  lib.rs  macros.rs  vecset.rs
crates/data/: Cargo.toml
crates/data/src/: data_expression.rs  data_specification.rs  data_terms.rs  sort_terms.rs
crates/io/: Cargo.toml  README.md
crates/io/src/: bitstream.rs  dumpfiles.rs  lib.rs  parse_numbers.rs  progress.rs
crates/ldd/: Cargo.toml
crates/ldd/src/: io_ldd.rs  io_sylvan.rs  iterators.rs  lib.rs  operations.rs  storage.rs
crates/ldd/src/storage/: ldd.rs
crates/lts/: Cargo.toml  README.md  build.rs
crates/lts/src/: incoming_transitions.rs  io.rs  io_aut.rs  io_bcg.rs  io_lts.rs  labelled_transition_system.rs  lib.rs  lts.rs  lts_builder.rs  lts_builder_fast.rs  multi_action.rs  product_lts.rs  random_lts.rs
crates/preorder/: Cargo.toml  README.md
crates/preorder/src/: antichain.rs  counterexample_builder.rs  failures_refinement.rs  lib.rs  preorder.rs
crates/rec-tests/: Cargo.toml
crates/rec-tests/src/: parse_rec.rs  syntax.rs
crates/rec-tests/tests/: rec_tests.rs
crates/reduction/: Cargo.toml  README.md
crates/reduction/src/: antichain.rs  block_partition.rs  compare.rs  failures_refinement.rs  indexed_partition.rs  lib.rs  quotient.rs  reduce.rs  scc_decomposition.rs  signature_refinement.rs  signatures.rs  simple_block_partition.rs  sort_topological.rs  weak_bisimulation.rs
crates/sabre/: Cargo.toml  README.md
crates/sabre/benchmarks/benches/: benchmark_sabre.rs
crates/sabre/src/: innermost_rewriter.rs  lib.rs  naive_rewriter.rs  rewrite_specification.rs  sabre_rewriter.rs  test_utility.rs
crates/sabre/src/matching/: nonlinear.rs
crates/sabre/src/set_automaton/: automaton.rs  mod.rs
crates/sabre/src/utilities/: configuration_stack.rs  data_position.rs  data_substitution.rs  innermost_stack.rs  substitution.rs  term_stack.rs
crates/sabre_compiling/: Cargo.toml  build.rs
crates/sabre_compiling/sabre_ffi/: Cargo.toml
crates/sabre_compiling/sabre_ffi/src/: export.rs  import.rs  lib.rs
crates/sabre_compiling/src/: indenter.rs  innermost_codegen.rs  lib.rs  library.rs  sabre_compiling.rs
crates/sharedmutex/: Cargo.toml
crates/sharedmutex/src/: bf_sharedmutex.rs  bf_vec.rs  lib.rs
crates/symbolic/: Cargo.toml  README.md
crates/symbolic/src/: cube_iter.rs  format.rs  io.rs  io_sylvan.rs  io_symbolic_lts.rs  ldd_to_bdd.rs  lib.rs  reachability.rs  reorder.rs  symbolic_lts.rs  symbolic_refinement.rs  utility.rs
crates/syntax/: Cargo.toml  README.md  mcrl2_grammar.pest
crates/syntax/spec/: bool.mcrl2
crates/syntax/src/: consume.rs  lib.rs  parse.rs  precedence.rs  syntax_tree.rs  syntax_tree_display.rs  visitor.rs
crates/syntax/tests/: example_test.rs  grammar_test.rs
crates/unsafety/: Cargo.toml  README.md
crates/unsafety/src/: block_allocator.rs  counting_allocator.rs  erasable.rs  lib.rs  slice_dst.rs  stable_pointer_set.rs
crates/vpg/: Cargo.toml  README.md
crates/vpg/src/: cube_iter.rs  display.rs  feature_transition_system.rs  fixpoint_equation_system.rs  io.rs  io_pg.rs  io_vpg.rs  lib.rs  modal_equation_system.rs  parity_game.rs  predecessors.rs  project.rs  random_bdd.rs  random_game.rs  reachability.rs  submap.rs  translate.rs  variability_parity_game.rs  variability_predecessors.rs  variability_zielonka.rs  zielonka.rs
crates/vpg/src/parity_games/: display_dot.rs  io.rs  io_pg.rs  io_vpg.rs  make_total.rs  mod.rs  parity_game.rs  player.rs  predecessors.rs  random_game.rs  variability_parity_game.rs  variability_predecessors.rs
tools/gui/: Cargo.toml  README.md
tools/gui/ltsgraph/: Cargo.toml
tools/gui/ltsgraph-lib/src/: graph_layout.rs  renderer_femtovg.rs  renderer_skia.rs
tools/gui/ltsgraph/benchmarks/: Cargo.toml
tools/gui/ltsgraph/src/: main.rs  pauseable_thread.rs
tools/lts/: Cargo.toml
tools/lts/src/: main.rs
tools/mcrl2/: Cargo.toml  README.md
tools/mcrl2/crates/mcrl2/: Cargo.toml
tools/mcrl2/crates/mcrl2-macros/: Cargo.toml
tools/mcrl2/crates/mcrl2-macros/src/: lib.rs  mcrl2_derive_terms.rs
tools/mcrl2/crates/mcrl2-sys/: Cargo.toml  build.rs
tools/mcrl2/crates/mcrl2-sys/cpp/: assert.h  atermpp.h  data.h  exception.h  pbes.cpp  pbes.h
tools/mcrl2/crates/mcrl2-sys/src/: atermpp.rs  data.rs  pbes.rs
tools/mcrl2/crates/mcrl2/src/: aterm.rs  atermpp.rs  busy_forbidden.rs  data.rs  data_expression.rs  global_lock.rs  lib.rs  pbes.rs  pbes_expression.rs  visitor.rs
tools/mcrl2/crates/mcrl2/src/atermpp/: aterm.rs  aterm_int.rs  aterm_list.rs  aterm_string.rs  busy_forbidden.rs  (+4 more)
tools/mcrl2/mcrl2/: Cargo.toml
tools/mcrl2/mcrl2-sys/: Cargo.toml  build.rs
tools/mcrl2/mcrl2-sys/cpp/: assert.h  atermpp.h  data.h  exception.h  log.h  pbes.cpp  pbes.h
tools/mcrl2/mcrl2-sys/cpp/pbes/: pbes.h
tools/mcrl2/mcrl2-sys/src/: atermpp.rs  data.rs  lib.rs  log.rs  pbes.rs
tools/mcrl2/mcrl2/src/: atermpp.rs  data.rs  lib.rs  pbes.rs
tools/mcrl2/pbes/: Cargo.toml
tools/mcrl2/pbes/src/: main.rs  permutation.rs  symmetry.rs
tools/mcrl2/xtask/src/: main.rs  sanitizer.rs
tools/release/ltsgraph/: Cargo.toml
tools/release/ltsgraph/src/: main.rs  pauseable_thread.rs  wgpu.rs
tools/release/rewrite/: Cargo.toml
tools/release/rewrite/src/: lib.rs  main.rs  trs_format.rs
tools/vpg/: Cargo.toml
tools/vpg/src/: main.rs
(+73 files in other folders)
