[workspace.package]
authors = ["Maurice Laveaux"]
edition = "2024"
license = "BSL-1.0"
repository = "https://github.com/mlaveaux/mCRL3.git"
rust-version = "1.85.0"
version = "1.0.0"

# Add debug information to the release binaries.
[profile.release]
lto = "fat"
panic = "abort"
debug = "full"
split-debuginfo= "packed"

[workspace]
resolver = "2"
members = [
    "3rd-party/pest_consume",
    "3rd-party/pest_consume_macros",
    "crates/aterm",
    "crates/aterm/benchmarks",
    "crates/aterm-ffi",
    "crates/data",
    "crates/gui",
    "crates/io",
    "crates/ldd",
    "crates/ldd/benchmarks",
    "crates/lts",
    "crates/macros",
    "crates/number",
    "crates/rec-tests",
    "crates/reduction",
    "crates/sabre_compiling",
    "crates/sabre_compiling/sabre_ffi",
    "crates/sabre",
    "crates/sabre/benchmarks",
    "crates/sharedmutex",
    "crates/sharedmutex/benchmarks",
    "crates/symbolic",
    "crates/syntax",
    "crates/unsafety",
    "crates/utilities",
    "crates/version",
    "crates/xtask",
    "tools/release/ltsgraph",
    "tools/release/ltsgraph/library",
    "tools/release/ltsgraph/benchmarks",
    "tools/release/ltsinfo",
    "tools/release/mcrl3rewrite",
]

[workspace.dependencies]
ahash = "0.8"
bitstream-io = "4.9"
bumpalo = "3.18"
clap = { version = "4.5", features = ["derive"] }
dashmap = { version = "7.0.0-rc2", features = ["inline-more"] }
delegate = "0.13"
env_logger = "0.11"
equivalent = "1.0"
hashbrown = "0.16"
html-escape = "0.2"
itertools = "0.14"
log = "0.4"
num = "0.4"
parking_lot = "0.12"
pest = "2.8"
pest_derive  = "2.8"
rand = "0.9"
rayon = "1.11"
regex = "1.12"
rustc-hash = "2.1"
smallvec = "1.15"
tempfile = "3.23"
thiserror = "2.0"
toml = "0.9"
oxidd = "0.11"

# Used by the lower level crates
allocator-api2 =  "0.3"
backtrace = "0.3"
crossbeam-utils = "0.8"
libloading = "0.8"
mimalloc = "0.1"
streaming-iterator = "0.1"
tagged-pointer = "0.2"
tikv-jemallocator = "0.6"

# Used for GUI tools
cosmic-text = "0.15"
femtovg = { version = "0.19", features = ["wgpu"] }
glam = "0.30"
rfd = { version = "0.15", default-features = false, features = ["xdg-portal", "tokio"] }
slint = { version = "1.14", features = ["compat-1-2", "std", "accessibility", 
    "backend-winit", "renderer-skia"], default-features = false}
slint-build = "1.14"
tiny-skia = "0.11"
tokio = { version = "1.48", features = ["rt", "macros"] }
wgpu = "27.0"
winapi = { version = "0.3", features = ["consoleapi"] }

# Used in macros
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

# Used for xtask
duct = "1.1"
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
which = "8.0"

# Used in tests
indoc  = "2.0"
test-case  = "3.3"
test-log = "0.2"
trybuild = "1.0"

# Used for fuzzing
arbitrary = { version = "1.4", features = ["derive"] }
arbtest = "0.3"
libfuzzer-sys = "0.4"

# Used for benchmarks
criterion = "0.7"

# The workspace libraries.
mcrl3_aterm = { path = "crates/aterm" }
mcrl3_data = { path = "crates/data" }
mcrl3_gui = { path = "crates/gui" }
mcrl3_io = { path = "crates/io" }
mcrl3_ldd = { path = "crates/ldd" }
mcrl3_lts = { path = "crates/lts" }
mcrl3_macros = { path = "crates/macros" }
mcrl3_number = { path = "crates/number" }
mcrl3_rec-tests = { path = "crates/rec-tests" }
mcrl3_reduction = { path = "crates/reduction" }
mcrl3_sabre = { path = "crates/sabre" }
mcrl3_sabre-compiling = { path = "crates/sabre_compiling" }
mcrl3_sabre-ffi = { path = "crates/sabre_compiling/sabre_ffi" }
mcrl3_sharedmutex = { path = "crates/sharedmutex" }
mcrl3_symbolic = { path = "crates/symbolic" }
mcrl3_syntax = { path = "crates/syntax" }
mcrl3_unsafety = { path = "crates/unsafety" }
mcrl3_utilities = { path = "crates/utilities" }
mcrl3_version = { path = "crates/version" }
pest_consume  = { path = "3rd-party/pest_consume" }
pest_consume_macros  = { path = "3rd-party/pest_consume_macros" }