[workspace.package]
authors = ["Maurice Laveaux"]
edition = "2024"
license = "BSL-1.0"
repository = "https://github.com/mlaveaux/merc.git"
rust-version = "1.85.0"
version = "1.0.0"

# Add debug information to the release binaries.
[profile.release]
lto = "fat"
panic = "abort"
debug = "full"
split-debuginfo= "packed"

[workspace]
resolver = "2"
members = [
    "3rd-party/pest_consume",
    "3rd-party/pest_consume_macros",
    "crates/aterm",
    "crates/aterm/benchmarks",
    "crates/aterm-ffi",
    "crates/data",
    "crates/gui",
    "crates/io",
    "crates/ldd",
    "crates/ldd/benchmarks",
    "crates/lts",
    "crates/macros",
    "crates/number",
    "crates/rec-tests",
    "crates/reduction",
    "crates/sabre_compiling",
    "crates/sabre_compiling/sabre_ffi",
    "crates/sabre",
    "crates/sabre/benchmarks",
    "crates/sharedmutex",
    "crates/sharedmutex/benchmarks",
    "crates/symbolic",
    "crates/syntax",
    "crates/unsafety",
    "crates/utilities",
    "crates/version",
    "crates/xtask",
    "tools/ltsinfo",
    "tools/rewrite",
]

[workspace.dependencies]
ahash = "0.8"
bitstream-io = "4.9"
bumpalo = "3.19"
clap = { version = "4.5", features = ["derive"] }
delegate = "0.13"
env_logger = "0.11"
equivalent = "1.0"
hashbrown = "0.16"
html-escape = "0.2"
itertools = "0.14"
log = "0.4"
num = "0.4"
oxidd = "0.11"
papaya = "0.2"
parking_lot = "0.12"
pest = "2.8"
pest_derive  = "2.8"
rand = "0.9"
rayon = "1.11"
regex = "1.12"
rustc-hash = "2.1"
smallvec = "1.15"
tempfile = "3.23"
thiserror = "2.0"
toml = "0.9"
winapi = { version = "0.3", features = ["consoleapi"] }

# Used by the lower level crates
allocator-api2 =  "0.3"
backtrace = "0.3"
crossbeam-utils = "0.8"
libloading = "0.9"
mimalloc = "0.1"
streaming-iterator = "0.1"
tikv-jemallocator = "0.6"

# Used in macros
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

# Used for xtask
duct = "1.1"
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
which = "8.0"

# Used in tests
indoc  = "2.0"
test-case  = "3.3"
test-log = "0.2"
trybuild = "1.0"

# Used for fuzzing
arbitrary = { version = "1.4", features = ["derive"] }
arbtest = "0.3"
libfuzzer-sys = "0.4"

# Used for benchmarks
criterion = "0.7"

# The workspace libraries.
merc_aterm = { path = "crates/aterm" }
merc_data = { path = "crates/data" }
merc_gui = { path = "crates/gui" }
merc_io = { path = "crates/io" }
merc_ldd = { path = "crates/ldd" }
merc_lts = { path = "crates/lts" }
merc_macros = { path = "crates/macros" }
merc_number = { path = "crates/number" }
merc_rec-tests = { path = "crates/rec-tests" }
merc_reduction = { path = "crates/reduction" }
merc_sabre = { path = "crates/sabre" }
merc_sabre-compiling = { path = "crates/sabre_compiling" }
merc_sabre-ffi = { path = "crates/sabre_compiling/sabre_ffi" }
merc_sharedmutex = { path = "crates/sharedmutex" }
merc_symbolic = { path = "crates/symbolic" }
merc_syntax = { path = "crates/syntax" }
merc_unsafety = { path = "crates/unsafety" }
merc_utilities = { path = "crates/utilities" }
merc_version = { path = "crates/version" }
pest_consume  = { path = "3rd-party/pest_consume" }
pest_consume_macros  = { path = "3rd-party/pest_consume_macros" }