[package]
name = "mcrl3_aterm"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
# The `mcrl3_debug` feature is used to enable additional run-time checks.
mcrl3_debug = ["parking_lot/deadlock_detection"]

[dependencies]
mcrl3_io.workspace = true
mcrl3_macros.workspace = true
mcrl3_number.workspace = true
mcrl3_sharedmutex.workspace = true
mcrl3_unsafety.workspace = true
mcrl3_utilities.workspace = true

ahash.workspace = true
allocator-api2.workspace = true
arbitrary.workspace = true
arbtest.workspace = true
dashmap.workspace = true
delegate.workspace = true
equivalent.workspace = true
itertools.workspace = true
log.workspace = true
parking_lot.workspace = true
pest_consume.workspace = true
pest_derive.workspace = true
pest.workspace = true
rand.workspace = true
rayon.workspace = true
rustc-hash.workspace = true
thiserror.workspace = true

[dev-dependencies]
trybuild.workspace = true