[package]
name = "merc_data"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
merc_aterm.workspace = true
merc_syntax.workspace = true
merc_macros.workspace = true
merc_utilities.workspace = true

ahash.workspace = true
indoc.workspace = true

delegate.workspace = true
thiserror.workspace = true
