[package]
name = "merc_io"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
merc_number.workspace = true
merc_utilities.workspace = true

arbitrary.workspace = true
arbtest.workspace = true
bitstream-io.workspace = true
log.workspace = true
regex.workspace = true
streaming-iterator.workspace = true
thiserror.workspace = true