[package]
name = "mcrl3_ldd"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mcrl3_io.workspace = true
mcrl3_utilities.workspace = true

rustc-hash.workspace = true
ahash.workspace = true
log.workspace = true
rand.workspace = true