[package]
name = "merc_ldd"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
merc_aterm.workspace = true
merc_io.workspace = true
merc_number.workspace = true
merc_utilities.workspace = true

ahash.workspace = true
delegate.workspace = true
itertools.workspace = true
log.workspace = true
rand.workspace = true
rustc-hash.workspace = true