[package]
name = "merc_lts"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
merc_aterm.workspace = true
merc_data.workspace = true
merc_io.workspace = true
merc_utilities.workspace = true

bumpalo.workspace = true
itertools.workspace = true
log.workspace = true
rand.workspace = true
regex.workspace = true
rustc-hash.workspace = true
streaming-iterator.workspace = true
thiserror.workspace = true

[dev-dependencies]
test-log.workspace = true