[package]
name = "merc_lts"
description = "Implements labelled transition systems for various I/O formats using a general LTS trait."
keywords = ["automata", "transition-systems"]
categories = ["data-structures", "science"]
readme = "README.md"

edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
merc_aterm.workspace = true
merc_data.workspace = true
merc_io.workspace = true
merc_utilities.workspace = true

bumpalo.workspace = true
clap.workspace = true
itertools.workspace = true
log.workspace = true
rand.workspace = true
regex.workspace = true
rustc-hash.workspace = true
streaming-iterator.workspace = true
thiserror.workspace = true

[dev-dependencies]
test-log.workspace = true