[package]
name = "merc_preorder"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
merc_collections.workspace = true
merc_io.workspace = true
merc_lts.workspace = true
merc_reduction.workspace = true
merc_syntax.workspace = true
merc_utilities.workspace = true

bitvec.workspace = true
bumpalo.workspace = true
clap.workspace = true
itertools.workspace = true
log.workspace = true
rand.workspace = true
rustc-hash.workspace = true

[dev-dependencies]
test-log.workspace = true