[package]
name = "merc_reduction"
description = "Reducing and comparing labelled transition systems modulo various bisimulation equivalences"
keywords = ["equivalence", "reduction", "transition-systems"]
categories = ["algorithms", "science"]
readme = "README.md"

edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
merc_io.workspace = true
merc_lts.workspace = true
merc_utilities.workspace = true

bitvec.workspace = true
bumpalo.workspace = true
clap.workspace = true
itertools.workspace = true
log.workspace = true
rand.workspace = true
rustc-hash.workspace = true

[dev-dependencies]
test-log.workspace = true