[package]
name = "merc_sabre-compiling"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
merc_aterm.workspace = true
merc_data.workspace = true
merc_rec-tests.workspace = true
merc_sabre.workspace = true
merc_utilities.workspace = true
merc_sabre-ffi.workspace = true

ahash.workspace = true
duct.workspace = true
indoc.workspace = true
libloading.workspace = true
tempfile.workspace = true
toml.workspace = true
env_logger.workspace = true
log.workspace = true

[dev-dependencies]
test-log.workspace = true

[build-dependencies]
toml.workspace = true