[package]
name = "merc_unsafety"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
# Enables an allocator that counts additional metrics (but is slower), this disables `merc_jemalloc` and `merc_mimalloc`.
merc_metrics = []

# Feature to enable jemalloc as the global allocator. This feature only works if 
# the `tikv-jemallocator` crate is supported on that platform.
merc_jemalloc = ["dep:tikv-jemallocator"]

# Feature to enable mimalloc as the global allocator.
merc_mimalloc = ["dep:mimalloc"]

# Enables extra debug options to be enabled. Also enables jemalloc debugging.
merc_debug = ["tikv-jemallocator?/debug"]

[dependencies]
merc_utilities.workspace = true

allocator-api2.workspace = true
equivalent.workspace = true
itertools.workspace = true
log.workspace = true
papaya.workspace = true
rand.workspace = true
rustc-hash.workspace = true

mimalloc = { workspace = true, optional = true }
tikv-jemallocator = { workspace = true, optional = true }
