[package]
name = "merc_vpg"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
merc_io.workspace = true
merc_lts.workspace = true
merc_macros.workspace = true
merc_syntax.workspace = true
merc_utilities.workspace = true

bitvec.workspace = true
clap.workspace = true
delegate.workspace = true
itertools.workspace = true
log.workspace = true
oxidd.workspace = true
rand.workspace = true
regex.workspace = true
streaming-iterator.workspace = true
thiserror.workspace = true