[package]
name = "merc-lts"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
merc_lts.workspace = true
merc_preorder.workspace = true
merc_reduction.workspace = true
merc_tools.workspace = true
merc_unsafety.workspace = true
merc_utilities.workspace = true

clap.workspace = true
env_logger.workspace = true
log.workspace = true
