[workspace.package]
edition = "2024"
license = "BSL-1.0"
rust-version = "1.85.0"
version = "1.0.0"

# Add debug information to the release binaries.
[profile.release]
lto = "fat"
panic = "abort"
debug = "line-tables-only"

[workspace]
resolver = "2"
members = [
    "crates/mcrl2-sys",
    "crates/mcrl2",
    "crates/xtask",
    "pbes",
]

[patch.crates-io]
cmake = { git = "https://github.com/reflectronic/cmake-rs/", branch = "vs-18" }

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
itertools = "0.14"
cmake = "0.1"

# Dependencies for building the mCRL2 C++ bindings.
cxx = "1.0"
cxx-build = { version = "1.0", features = ["parallel"] }
cc = "1.2"
cargo-emit = "0.2"

# Dependencies used in xtask
duct = "1.1"

# The workspace libraries.
mcrl2 = { path = "crates/mcrl2" }
mcrl2-sys = { path = "crates/mcrl2-sys" }
merc_io = { path = "../../crates/io" }
merc_tools = { path = "../../crates/tools" }
merc_utilities = { path = "../../crates/utilities" }