[package]
name = "merc-vpg"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
merc_syntax.workspace = true
merc_tools.workspace = true
merc_unsafety.workspace = true
merc_utilities.workspace = true
merc_vpg.workspace = true

clap.workspace = true
duct.workspace = true
env_logger.workspace = true
log.workspace = true
oxidd.workspace = true
which.workspace = true