[package]
name = "mcrl3_sabre-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
import = []

[dependencies]
mcrl3_aterm.workspace = true
mcrl3_data.workspace = true
mcrl3_utilities.workspace = true
mcrl3_unsafety.workspace = true