[package]
name = "mcrl2-sys"
links = "mcrl2"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
merc_tools.workspace = true
cxx.workspace = true
zlib-rs = { optional = true, workspace = true }

[build-dependencies]
cxx-build.workspace = true
cc.workspace = true
cmake.workspace = true
cargo-emit.workspace = true

[features]

# If it turns out that cpptrace doesn't work properly on all platforms, we can disable it by default.
default = ["mcrl2_cpptrace"]

# Enables the compiling cpptrace option for mCRL2, this gives proper backtraces on exceptions. The cpptrace
# library depends on zlib, so we need to enable that as well.
mcrl2_cpptrace = ["dep:zlib-rs"]

# Enables the compiling rewriter option for mCRL2.
mcrl2_jittyc = []