[package]
name = "merc-ltsgraph"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
merc_gui.workspace = true
merc_lts.workspace = true
merc_utilities.workspace = true
merc_ltsgraph-lib = { path = "./library" }
merc_version.workspace = true

clap.workspace = true
env_logger.workspace = true
femtovg.workspace = true
log.workspace = true
rfd.workspace = true
slint.workspace = true
tiny-skia.workspace = true
tokio.workspace = true
wgpu.workspace = true

[build-dependencies]
slint-build.workspace = true